--- a/web/UKDigitalTwin/example-dt-vis/css/dtvf.css
+++ b/web/UKDigitalTwin/example-dt-vis/css/dtvf.css
@@ -11,7 +11,7 @@ body {
   margin: 0px;
   padding: 0px;
   overflow: hidden;
-  font-family: "Segoe UI", Arial, sans-serif;
+  font-family: "Inter", sans-serif !important;
   font-size: 12pt;
 }
 
@@ -38,7 +38,11 @@ h6 {
   width: auto;
   max-width: 400px;
   pointer-events: none;
-  background: linear-gradient(180deg, rgba(245,245,255,1) 80%,rgba(230,230,240,1) 100%);
+  background: linear-gradient(
+    180deg,
+    rgba(245, 245, 255, 1) 80%,
+    rgba(230, 230, 240, 1) 100%
+  );
 }
 .mapboxgl-popup-content p {
   font-style: italic;
@@ -56,7 +60,7 @@ h6 {
   z-index: 1;
 
   color: white;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Inter", sans-serif !important;
   font-size: 10pt;
 }
 #controlContainer p {
@@ -106,6 +110,7 @@ h6 {
   background-color: rgba(0, 0, 0, 0.4);
   border-radius: 8px;
   padding: 10px;
+  max-height: 550px;
 }
 #layerContainer:hover {
   background-color: rgba(0, 0, 0, 0.6);
@@ -116,9 +121,19 @@ h6 {
 #layerTree ul {
   padding-left: 15px;
 }
-#layerTree ul,
-li {
+#layerTree ul, li {
   list-style-type: none;
+}
+#layerTreeContainer {
+  min-height: 30vh; 
+  max-height: 50vh; 
+  overflow-y: auto;
+}
+@media only screen and (max-height: 900px) {
+  #layerTreeContainer {
+    max-height: 25vh; 
+    overflow-y: auto;
+  }
 }
 
 /* Side Panel */
@@ -462,20 +477,20 @@ li {
   font-weight: bold;
   margin-right: 0px !important;
   font-size: 10pt !important;
-  font-family: "Segoe UI", Arial, sans-serif;
+  font-family: "Inter", sans-serif !important;
   color: black !important;
 }
 .json-value {
   color: navy !important;
   font-size: 10pt !important;
-  font-family: "Segoe UI", Arial, sans-serif;
+  font-family: "Inter", sans-serif !important;
 }
 .json-separator {
   line-height: 1.25;
 }
 .json-size {
   font-size: 10pt !important;
-  font-family: "Segoe UI", Arial, sans-serif;
+  font-family: "Inter", sans-serif !important;
   color: rgb(100, 100, 100) !important;
 }
 .empty-icon {
@@ -548,15 +563,15 @@ li {
 }
 
 #linkedFilesContainer {
-	background-color: rgba(0, 0, 0, 0.05);
-	border-radius: 8px;
-	padding: 10px;
+  background-color: rgba(0, 0, 0, 0.05);
+  border-radius: 8px;
+  padding: 10px;
 }
-
 
 #controlTitle {
   width: 100%;
   height: 24px;
+  margin-bottom: 5px;
 }
 #controlTitle p {
   width: 50%;
@@ -570,7 +585,7 @@ li {
   text-align: left;
   width: 20px;
   height: 18px;
-  line-height: 18px; 
+  line-height: 18px;
   padding-top: 0px;
 }
 
@@ -583,7 +598,7 @@ li {
   margin-top: 2px;
   margin-right: 16px;
 }
-.switch input { 
+.switch input {
   opacity: 0;
   width: 0;
   height: 0;
@@ -596,8 +611,8 @@ li {
   right: 0;
   bottom: 0;
   background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 .slider:before {
   position: absolute;
@@ -607,14 +622,14 @@ li {
   left: 2px;
   bottom: 2px;
   background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 input:checked + .slider {
-  background-color: #2196F3;
+  background-color: #2196f3;
 }
 input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
+  box-shadow: 0 0 1px #2196f3;
 }
 input:checked + .slider:before {
   -webkit-transform: translateX(13px);
@@ -635,14 +650,14 @@ input:checked + .slider:before {
 }
 
 #tiltShift {
-	display: block;
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	z-index: 0;
-	pointer-events: none;
+  display: block;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 0;
+  pointer-events: none;
 }
 
 #select-feature {
@@ -652,7 +667,7 @@ input:checked + .slider:before {
   margin-right: 25px;
 }
 
-label[for=select-feature] {
+label[for="select-feature"] {
   height: 30px;
   width: 15%;
   float: left;
@@ -660,14 +675,12 @@ label[for=select-feature] {
   line-height: 30px;
 }
 
-
-
 #animationIntro {
   width: calc(100% - 20px);
   height: 100px;
   margin: 10px;
   font-size: 10pt;
-  border-bottom: 1px solid rgb(230, 230, 230);;
+  border-bottom: 1px solid rgb(230, 230, 230);
 }
 #animationContainer {
   width: 100%;
@@ -676,7 +689,6 @@ label[for=select-feature] {
   overflow-y: auto;
 }
 #animationLeft {
-
   width: 30%;
   padding: 10px;
   margin: 10px 5px 10px 10px;
@@ -696,7 +708,7 @@ label[for=select-feature] {
 
 #animationLeft table {
   margin: auto;
-  border-collapse: separate; 
+  border-collapse: separate;
   border-spacing: 5px;
   font-size: 11pt;
 }
@@ -761,7 +773,7 @@ label[for=select-feature] {
 }
 #animationBottom p {
   float: left;
-  width: calc(100% - 265px);
+  width: calc(100% - 300px);
   margin: 0px;
   height: 30px;
   line-height: 30px;
@@ -777,7 +789,7 @@ label[for=select-feature] {
 }
 
 #overlay {
-  background-color: rgba(0, 0, 0, 0.0);
+  background-color: rgba(0, 0, 0, 0);
   bottom: 0;
   left: 0;
   position: fixed;
@@ -785,3 +797,47 @@ label[for=select-feature] {
   top: 0;
   z-index: 999;
 }
+.ui-widget {
+    font-family: "Inter", sans-serif !important;
+}
+
+
+#loadingOverlay {
+  position: fixed;
+  display: flex;
+  z-index: 999;
+
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0;
+
+  background-color: rgba(255, 255, 255, 0.66);
+}
+#loadingInner {
+  width: 250px;
+  height: 250px;
+  margin: auto;
+  vertical-align: top;
+  display: inline-block;
+  text-align: center;
+}
+
+
+
+::-webkit-scrollbar-track {
+   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
+   box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
+   background-color: rgb(200, 200, 200, 0.5);
+   border-radius: 10px;
+ }
+ 
+::-webkit-scrollbar {
+   width: 10px;
+   background-color: #F5F5F5;
+ }
+ 
+::-webkit-scrollbar-thumb {
+   border-radius: 10px;
+   background-color: #4b753e;
+ }
