dev-dtvf-refactor: Added sample WMS endpoint to example visualisation

--- a/web/digital-twin-vis-framework/example-visualisation/local.css
+++ b/web/digital-twin-vis-framework/example-visualisation/local.css
@@ -27,3 +27,10 @@
     width: 50% !important;
     margin-bottom: 2px;
 }
+
+.hummingbird-treeview span {
+    font-size: 8pt !important;
+}
+.hummingbird-treeview label {
+    font-size: 8pt !important;
+}
