160-dev-rxn-opt-goal-agent: [RxnOptGoalAgent] updated ROG agent to include chemical reaction iri as the input to ROGI agent; rearranged test triples and updated integration tests; fixed bug when querying reagent bottle in chemistry_and_robots util package.

--- a/Agents/RxnOptGoalAgent/templates/rxn_opt_goal.html
+++ b/Agents/RxnOptGoalAgent/templates/rxn_opt_goal.html
@@ -53,8 +53,12 @@
                 <span class="chem-rxn">Please specify the chemical reaction:</span><br><br>
 
                 <!-- chemical reaction iri -->
-                <label for="chemicalReaction">Chemical Reaction IRI</label>
-                <input type="text" placeholder="http://chem_rxn_123" name="chem_rxn">
+                <select name="chem_rxn" id="chem_rxn" class="Input">
+                    <option value="" disabled selected>Please select chemical reaction IRI</option>
+                    {% for o in chem_rxn_iri %}
+                    <option value="{{ o.iri }}">{{ o.display }}</option>
+                    {% endfor %}
+                </select>
             </div><br><br>
 
             <br><br>
