dev: updated question lists in front end

--- a/MARIE_AND_BERT/templates/index_new.html
+++ b/MARIE_AND_BERT/templates/index_new.html
@@ -183,7 +183,7 @@ This is included inline, rather than as a separate script, for efficiency reason
                 </div>
                 <h3>Example Questions</h3>
 
-                                <button type="submit" class="accordion">Molecular properties (from Pubchem)</button>
+                <button type="submit" class="accordion">Molecular properties (from Pubchem)</button>
                 <div class="accordion-panel">
                     To search properties of molecules
                     <ul>
@@ -215,19 +215,45 @@ This is included inline, rather than as a separate script, for efficiency reason
                             <div class="sample-question">Whats the number of covalent unit C12H24O2?</div>
                         </li>
                         <li>
-                            <div class="sample-question">Molecular formula of carbanide?</div>
-                        </li>
-                        <li>
                             <div class="sample-question">What is the charge of H57NO6PC26+?</div>
                         </li>
                         <li>
                             <div class="sample-question">CH3O5P's complexity?</div>
                         </li>
                         <li>
-                            <div class="sample-question">molar weight of [[5-(6-amino-2-methylsulfanylpurin-9-yl)-3,4-dihydroxyoxolan-2-yl]methoxy-oxidophosphoryl] phosphate?</div>
+                            <div class="sample-question">What is the molecular weight of CH4?</div>
                         </li>
                     </ul>
                 </div>
+
+                <button type="submit" class="accordion">Molecular properties</button>
+                <div class="accordion-panel">
+                    To search properties of molecules
+                    <ul>
+                        <li>
+                            <div class="sample-question">What is the dipole moment of Benzene? </div>
+                        </li>
+                        <li>
+                            <div class="sample-question">Show the standard enthalpy of formation of CH4.</div>
+                        </li>
+                        <li>
+                            <div class="sample-question">lennard jones diameter of carbon dioxide</div>
+                        </li>
+                        <li>
+                            <div class="sample-question">lennard jones well depth of methane</div>
+                        </li>
+                        <li>
+                            <div class="sample-question">rotational relaxation collision number of H2O2</div>
+                        </li>
+                        <li>
+                            <div class="sample-question">What is the spin multiplicity of H2O?</div>
+                        </li>
+                        <li>
+                            <div class="sample-question">What is the geometry of CO2?</div>
+                        </li>
+                    </ul>
+                </div>
+
 
 
                 <p><br></p>
