160-dev-rxn-opt-goal-agent: [RxnOptGoalAgent] added more instruction on goal reactivation webpage.

--- a/Agents/RxnOptGoalAgent/templates/rxn_opt_goal_reactivate.html
+++ b/Agents/RxnOptGoalAgent/templates/rxn_opt_goal_reactivate.html
@@ -23,7 +23,7 @@
 
             <!-- restrictions -->
             <div class="restrictions">
-                <span class="restrictions">Please input the new restrictions:</span><br><br>
+                <span class="restrictions">Please input the new restrictions (restrictions remain unchanged for any one left empty):</span><br><br>
                 <!-- cycleAllowance -->
                 <label for="cycleAllowance">CycleAllowance (between 1 and 150):</label>
                 <input type="number" id="cycleAllowance" name="cycleAllowance" min="1" max="150"><br><br>
@@ -37,7 +37,8 @@
 
             <!-- laboratories involved -->
             <div class="laboratories">
-                <span class="laboratories">At the moment, all laboratories involved in the previous campaign are involved by default.</span><br><br>
+                <span class="laboratories">At the moment, all laboratories involved in the previous campaign are involved by default.
+                    <br>Please contact developers of TheWorldAvatar if more features needed.</span><br><br>
             </div><br><br>
 
             <br><br>
